tests/errors/int_to_rfm.td
component int_to_rfm
{
  requires interface counter_output input;
}

